--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,5 @@
 body {
   margin: 0;
   font-family: 'Inter', sans-serif;
-  background-color: #111827;
-  /* gray-900 */
+  background-color: #ffffff;
 }
